All_Component_DX/force-app/main/default/objects/Booking_Window__c/Booking_Window__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This object stores the definition and access rights for booking windows. Booking windows are selected in Cases and subsequently used for dispatching technicians by OptiMax engine</description>
    <label>Booking Window</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Booking Windows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>