All_Component_DX/force-app/main/default/objects/Booking_Window__c/fields/Average_Slots__c.field-meta.xml
<CustomField>
    <fullName>Average_Slots__c</fullName>
    <description>Number of service slots per technician that can be committed in this time period. This information is used to show the number of available slots on the Booking Window selection screen</description>
    <label>Average Slots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>