All_Component_DX/force-app/main/default/objects/Booking_Window__c/fields/Booking_Definition__c.field-meta.xml
<CustomField>
    <fullName>Booking_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the booking window to which the user has access. Reference to an existing booking window record in ServiceMax</description>
    <label>Booking Definition</label>
    <referenceTo>Booking_Window__c</referenceTo>
    <relationshipLabel>Users With Access To This Booking Window</relationshipLabel>
    <relationshipName>Booking_Window</relationshipName>
    <type>Lookup</type>
</CustomField>