All_Component_DX/force-app/main/default/objects/Booking_Window__c/fields/Booking_Window_Name__c.field-meta.xml
<CustomField>
    <fullName>Booking_Window_Name__c</fullName>
    <description>A user-friendly name for the booking window. For example, &quot;Peak Hour Slot&quot;</description>
    <inlineHelpText>Enter a user-friendly name for this booking window. For example, &quot;After Hours&quot;</inlineHelpText>
    <label>Booking Window Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>