All_Component_DX/force-app/main/default/objects/Booking_Window__c/fields/Display_Order__c.field-meta.xml
<CustomField>
    <fullName>Display_Order__c</fullName>
    <description>Order in which this booking window should be displayed relative to other booking windows in the Case Booking Window selection screen.</description>
    <label>Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>