All_Component_DX/force-app/main/default/objects/Booking_Window__c/fields/IsDefault__c.field-meta.xml
<CustomField>
    <fullName>IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this booking window can be displayed in the Booking Window selection screen for all users if the current user is not explicitly given access to any booking window records</description>
    <label>Is Default</label>
    <type>Checkbox</type>
</CustomField>