All_Component_DX/force-app/main/default/objects/Booking_Window__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the Salesforce user that has access to a booking window. Applicable only if the record type is Access</description>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Booking_Window</relationshipName>
    <type>Lookup</type>
</CustomField>