All_Component_DX/force-app/main/default/objects/Booking_Window__c/recordTypes/Access.recordType-meta.xml
<RecordType>
    <fullName>Access</fullName>
    <active>true</active>
    <description>Lists call center users that have access to a booking window. Since an organization can have multiple booking windows across geographies, Access enables display of only those booking windows that are applicable for a local region</description>
    <label>Access</label>
</RecordType>