All_Component_DX/force-app/main/default/objects/Booking_Window__c/recordTypes/Definition.recordType-meta.xml
<RecordType>
    <fullName>Definition</fullName>
    <active>true</active>
    <description>Contains basic information about a booking window such as the name, time period and display order</description>
    <label>Definition</label>
</RecordType>